--- a/Thuc hanh luyen tap cau truc Switch Case/Thuc hanh cau truc Swicth Case bai 1.html
+++ b/Thuc hanh luyen tap cau truc Switch Case/Thuc hanh cau truc Swicth Case bai 1.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <script>
+    let browser = prompt("Trình duyệt")
     switch (browser) {
         case 'Edge':
             alert("You've got the Edge!");
