--- a/Thuc hanh luyen tap cau truc Switch Case/Thuc hanh cau truc Swicth Case bai 2.html
+++ b/Thuc hanh luyen tap cau truc Switch Case/Thuc hanh cau truc Swicth Case bai 2.html
@@ -8,14 +8,14 @@
 <script>
     let a = prompt('a?', '');
     switch (a) {
-        case 0:
+        case '0':
             alert(0);
             break;
-        case 1:
+        case '1':
             alert(1);
             break;
-        case 2:
-        case 3:
+        case '2':
+        case '3':
             alert('2,3');
             break;
     }
