Add file Bai luyen tạp vong lap 1

--- a/Bai tap Luyen tap vong lap 1/Bai 1.html
+++ b/Bai tap Luyen tap vong lap 1/Bai 1.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Vòng Lặp</title>
+    <title>Bai 1</title>
 </head>
 <body>
-<h1>Vòng lặp For</h1>
 <p id="result"></p>
 <script>
     let i;
     let text ='';
-    for (i=0;i<100;i++){
+    for (i=1;i<100;i++){
         text += 'The number is ' + i + '<br/>';
     }
     document.getElementById('result').innerHTML=text;
+    document.write('Done');
 </script>
 </body>
 </html>
